--- a/secrets.toml
+++ b/secrets.toml
@@ -1,3 +1,3 @@
 # JSONBin API 配置
-JSONBIN_API_KEY = "$2a$10$j580Iqc.8OANaDrCsg3K8eJzl2ftTuZtnqf3c9Uywc7GIvutLA4wq"
-JSONBIN_BIN_ID = "69421b3b43b1c97be9f39451"
+JSONBIN_API_KEY = "$2a$10$n5XVm88FFGFGt3egINiPbefQwY9lKz2.wdY5DDZfGq0..9c6n0RR6"
+JSONBIN_BIN_ID = ""  # 留空，让应用自动创建新的 Bin
