--- a/secrets.toml
+++ b/secrets.toml
@@ -1,3 +1,3 @@
 # JSONBin API 配置
-JSONBIN_API_KEY = "$2a$10$n5XVm88FFGFGt3egINiPbefQwY9lKz2.wdY5DDZfGq0..9c6n0RR6"
+JSONBIN_API_KEY = "$2a$10$42SqFe9j.P0QoU5znWrgh.x4gpa2wbdABw3FYMnYHPLW92hGVN0pC"
 JSONBIN_BIN_ID = ""  # 留空，让应用自动创建新的 Bin
