--- a/secrets.toml
+++ b/secrets.toml
@@ -1,3 +1,3 @@
 # JSONBin API 配置
-JSONBIN_API_KEY = "$2a$10$42SqFe9j.P0QoU5znWrgh.x4gpa2wbdABw3FYMnYHPLW92hGVN0pC"
+JSONBIN_API_KEY = "$2a$10$pleOacf0lQu1mvIU//jjfeYPUCb.kiFXX.08qupD/90UYKwHtU8e."
 JSONBIN_BIN_ID = ""  # 留空，让应用自动创建新的 Bin
