--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,3 @@
 # JSONBin API 配置
 JSONBIN_API_KEY = "$2a$10$pleOacf0lQu1mvIU//jjfeYPUCb.kiFXX.08qupD/90UYKwHtU8e."
-JSONBIN_BIN_ID = "6957845543b1c97be913f3f2"  # 留空，让应用自动创建新的 Bin
+JSONBIN_BIN_ID = ""  # 留空，让应用自动创建新的 Bin
